implement new DedupStore.